// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot before and after loading 1`] = `
Array [
  <header>
    <div>
      <nav>
        <br />
        <div
          id="loginDiv"
        >
          <button
            onClick={[Function]}
          >
            Sign in with GitHub
          </button>
        </div>
         
        <div
          id="logoutDiv"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <button
            id="logout"
            name="logout"
            onClick={[Function]}
            type="submit"
          >
            Logout
          </button>
        </div>
      </nav>
    </div>
  </header>,
  <main>
    <div
      className="SplitPane  vertical "
      style={
        Object {
          "MozUserSelect": "text",
          "WebkitUserSelect": "text",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "left": 0,
          "msUserSelect": "text",
          "outline": "none",
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "userSelect": "text",
        }
      }
    >
      <div
        className="Pane vertical Pane1  "
        style={
          Object {
            "flex": "none",
            "outline": "none",
            "position": "relative",
            "width": 500,
          }
        }
      >
        <div>
          <div>
            <form
              onSubmit={[Function]}
            >
              <h3>
                Insert Data 
              </h3>
              <label>
                Name:  
                <input
                  name="name"
                  onChange={[Function]}
                  type="text"
                  value=""
                />
              </label>
              <br />
              <br />
              <label>
                Age:  
                <input
                  name="age"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
                <br />
                <br />
              </label>
               
              <div
                onChange={[Function]}
              >
                Class:  
                <input
                  name="class"
                  type="radio"
                  value="FY"
                />
                 FY
                <input
                  name="class"
                  type="radio"
                  value="SY"
                />
                 SY
                <input
                  name="class"
                  type="radio"
                  value="TY"
                />
                 TY
              </div>
              <br />
              <button
                type="submit"
              >
                Add User
              </button>
            </form>
          </div>
        </div>
      </div>
      <span
        className="Resizer vertical "
        onClick={[Function]}
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={Object {}}
      />
      <div
        className="Pane vertical Pane2  "
        style={
          Object {
            "flex": 1,
            "outline": "none",
            "position": "relative",
          }
        }
      >
        <div>
          <div>
            <h3>
              Filter: 
            </h3>
            <div
              onChange={[Function]}
            >
              <input
                defaultChecked={false}
                id="c1"
                type="checkbox"
                value="FY"
              />
               FY
              <input
                defaultChecked={false}
                id="c2"
                type="checkbox"
                value="SY"
              />
               SY
              <input
                defaultChecked={false}
                id="c3"
                type="checkbox"
                value="TY"
              />
               TY
            </div>
            <div
              onChange={[Function]}
            >
              <h3>
                Sort By:
              </h3>
              <input
                name="options"
                type="radio"
                value="Name"
              />
               Name
              <input
                name="options"
                type="radio"
                value="Age"
              />
               Age
              <input
                defaultChecked={true}
                name="options"
                type="radio"
                value="No"
              />
               No Sort
            </div>
          </div>
          <div>
            <h2>
              No. of Users: 
              0
               
            </h2>
            <ul />
            <table
              aria-label="Sortable Table"
              className="pf-c-table pf-m-grid-md"
              role="grid"
            >
              <caption>
                Users
              </caption>
              <thead
                className=""
              >
                <tr>
                  <th
                    aria-sort="none"
                    className="pf-c-table__sort"
                    data-key={0}
                    data-label="Name"
                    scope="col"
                  >
                    <button
                      className="pf-c-button pf-m-plain"
                      onClick={[Function]}
                    >
                      Name
                      <span
                        className="pf-c-table__sort-indicator"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            transform=""
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    className="pf-c-table__sort"
                    data-key={1}
                    data-label="Age"
                    scope="col"
                  >
                    <button
                      className="pf-c-button pf-m-plain"
                      onClick={[Function]}
                    >
                      Age
                      <span
                        className="pf-c-table__sort-indicator"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            transform=""
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    className=""
                    data-key={2}
                    data-label="Class"
                    scope="col"
                  >
                    Class
                  </th>
                </tr>
              </thead>
              <tbody
                className=""
              />
            </table>
          </div>
        </div>
      </div>
    </div>
  </main>,
]
`;

exports[`matches snapshot before and after loading 2`] = `
Array [
  <header>
    <div>
      <nav>
        <br />
        <div
          id="loginDiv"
        >
          <button
            onClick={[Function]}
          >
            Sign in with GitHub
          </button>
        </div>
         
        <div
          id="logoutDiv"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <button
            id="logout"
            name="logout"
            onClick={[Function]}
            type="submit"
          >
            Logout
          </button>
        </div>
      </nav>
    </div>
  </header>,
  <main>
    <div
      className="SplitPane  vertical "
      style={
        Object {
          "MozUserSelect": "text",
          "WebkitUserSelect": "text",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "left": 0,
          "msUserSelect": "text",
          "outline": "none",
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "userSelect": "text",
        }
      }
    >
      <div
        className="Pane vertical Pane1  "
        style={
          Object {
            "flex": "none",
            "outline": "none",
            "position": "relative",
            "width": 500,
          }
        }
      >
        <div>
          <div>
            <form
              onSubmit={[Function]}
            >
              <h3>
                Insert Data 
              </h3>
              <label>
                Name:  
                <input
                  name="name"
                  onChange={[Function]}
                  type="text"
                  value=""
                />
              </label>
              <br />
              <br />
              <label>
                Age:  
                <input
                  name="age"
                  onChange={[Function]}
                  type="number"
                  value=""
                />
                <br />
                <br />
              </label>
               
              <div
                onChange={[Function]}
              >
                Class:  
                <input
                  name="class"
                  type="radio"
                  value="FY"
                />
                 FY
                <input
                  name="class"
                  type="radio"
                  value="SY"
                />
                 SY
                <input
                  name="class"
                  type="radio"
                  value="TY"
                />
                 TY
              </div>
              <br />
              <button
                type="submit"
              >
                Add User
              </button>
            </form>
          </div>
        </div>
      </div>
      <span
        className="Resizer vertical "
        onClick={[Function]}
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={Object {}}
      />
      <div
        className="Pane vertical Pane2  "
        style={
          Object {
            "flex": 1,
            "outline": "none",
            "position": "relative",
          }
        }
      >
        <div>
          <div>
            <h3>
              Filter: 
            </h3>
            <div
              onChange={[Function]}
            >
              <input
                defaultChecked={false}
                id="c1"
                type="checkbox"
                value="FY"
              />
               FY
              <input
                defaultChecked={false}
                id="c2"
                type="checkbox"
                value="SY"
              />
               SY
              <input
                defaultChecked={false}
                id="c3"
                type="checkbox"
                value="TY"
              />
               TY
            </div>
            <div
              onChange={[Function]}
            >
              <h3>
                Sort By:
              </h3>
              <input
                name="options"
                type="radio"
                value="Name"
              />
               Name
              <input
                name="options"
                type="radio"
                value="Age"
              />
               Age
              <input
                defaultChecked={true}
                name="options"
                type="radio"
                value="No"
              />
               No Sort
            </div>
          </div>
          <div>
            <h2>
              No. of Users: 
              6
               
            </h2>
            <ul>
              <li>
                Name: 
                rachel
                   Age: 
                18
                   Class:
                 
                FY
              </li>
              <li>
                Name: 
                monica
                   Age: 
                21
                   Class:
                 
                SY
              </li>
              <li>
                Name: 
                joey
                   Age: 
                27
                   Class:
                 
                FY
              </li>
              <li>
                Name: 
                phoebe
                   Age: 
                22
                   Class:
                 
                TY
              </li>
              <li>
                Name: 
                ross
                   Age: 
                17
                   Class:
                 
                FY
              </li>
              <li>
                Name: 
                chandler
                   Age: 
                28
                   Class:
                 
                SY
              </li>
            </ul>
            1
            2
            3
            4
            5
            6
            <table
              aria-label="Sortable Table"
              className="pf-c-table pf-m-grid-md"
              role="grid"
            >
              <caption>
                Users
              </caption>
              <thead
                className=""
              >
                <tr>
                  <th
                    aria-sort="none"
                    className="pf-c-table__sort"
                    data-key={0}
                    data-label="Name"
                    scope="col"
                  >
                    <button
                      className="pf-c-button pf-m-plain"
                      onClick={[Function]}
                    >
                      Name
                      <span
                        className="pf-c-table__sort-indicator"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            transform=""
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    className="pf-c-table__sort"
                    data-key={1}
                    data-label="Age"
                    scope="col"
                  >
                    <button
                      className="pf-c-button pf-m-plain"
                      onClick={[Function]}
                    >
                      Age
                      <span
                        className="pf-c-table__sort-indicator"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                            transform=""
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    className=""
                    data-key={2}
                    data-label="Class"
                    scope="col"
                  >
                    Class
                  </th>
                </tr>
              </thead>
              <tbody
                className=""
              >
                <tr
                  className=""
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className=""
                    data-key={0}
                    data-label="Name"
                  >
                    rachel
                  </td>
                  <td
                    className=""
                    data-key={1}
                    data-label="Age"
                  >
                    18
                  </td>
                  <td
                    className=""
                    data-key={2}
                    data-label="Class"
                  >
                    FY
                  </td>
                </tr>
                <tr
                  className=""
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className=""
                    data-key={0}
                    data-label="Name"
                  >
                    monica
                  </td>
                  <td
                    className=""
                    data-key={1}
                    data-label="Age"
                  >
                    21
                  </td>
                  <td
                    className=""
                    data-key={2}
                    data-label="Class"
                  >
                    SY
                  </td>
                </tr>
                <tr
                  className=""
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className=""
                    data-key={0}
                    data-label="Name"
                  >
                    joey
                  </td>
                  <td
                    className=""
                    data-key={1}
                    data-label="Age"
                  >
                    27
                  </td>
                  <td
                    className=""
                    data-key={2}
                    data-label="Class"
                  >
                    FY
                  </td>
                </tr>
                <tr
                  className=""
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className=""
                    data-key={0}
                    data-label="Name"
                  >
                    phoebe
                  </td>
                  <td
                    className=""
                    data-key={1}
                    data-label="Age"
                  >
                    22
                  </td>
                  <td
                    className=""
                    data-key={2}
                    data-label="Class"
                  >
                    TY
                  </td>
                </tr>
                <tr
                  className=""
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className=""
                    data-key={0}
                    data-label="Name"
                  >
                    ross
                  </td>
                  <td
                    className=""
                    data-key={1}
                    data-label="Age"
                  >
                    17
                  </td>
                  <td
                    className=""
                    data-key={2}
                    data-label="Class"
                  >
                    FY
                  </td>
                </tr>
                <tr
                  className=""
                  hidden={false}
                  onMouseDown={[Function]}
                >
                  <td
                    className=""
                    data-key={0}
                    data-label="Name"
                  >
                    chandler
                  </td>
                  <td
                    className=""
                    data-key={1}
                    data-label="Age"
                  >
                    28
                  </td>
                  <td
                    className=""
                    data-key={2}
                    data-label="Class"
                  >
                    SY
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </main>,
]
`;
